--- a/less/modals.less
+++ b/less/modals.less
@@ -1,6 +1,13 @@
 // MODALS
 // ------
 
+.modal-open {
+  .dropdown-menu {  z-index: @zindexDropdown + @zindexModal }
+  .dropdown.open { *z-index: @zindexDropdown + @zindexModal }
+  .popover       {  z-index: @zindexPopover  + @zindexModal }
+  .tooltip       {  z-index: @zindexTooltip  + @zindexModal }
+}
+
 .modal-backdrop {
   position: fixed;
   top: 0;
